# trading-engine

./: .coderabbit.yaml  .gitignore  Dockerfile  PHASE1_IMPL_SPEC.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: auto-pr.yml  cd.yml  ci.yml
api/: dependencies.py
api/routes/: boxes.py  (+17 more)
core/: __init__.py  pair.py  temp_regime_query.py
scripts/: analyze_time_patterns.py  backfill_pnl.py  check_candle_continuity.py  create_ai_judgments.sql  create_analysis_tables.sql  create_backtest_tables.sql  create_gmo_coin_tables.sql  create_gmo_tables.sql  create_jit_advisories.sql  create_paper_trades.sql  create_rachel_advisories.sql  migrate_add_pyramid_count.sql  migrate_ai_judgments_add_post_analysis.sql  migrate_box_positions_bidirectional.sql  migrate_boxes_add_strategy_id.sql  migrate_exchange_sl.sql  migrate_ifdoco.sql  migrate_lessons_table.sql  migrate_rachel_advisories_add_adjustments.sql  migrate_rachel_advisories_add_hold_override.sql  migrate_rachel_advisories_add_macro_context.sql  migrate_rachel_advisories_add_trading_style.sql  migrate_strategy_snapshots.sql  migrate_switch_recommendations.sql  migrate_wake_up_enhancement.sql  migrate_wake_up_pipeline.sql  run_1h_grid_walkforward.py  run_4h_grid_walkforward.py  run_box_wf.py  run_multipair_4h_wf.py  validate-env.sh
system-design/: API_CATALOG.md  BOX_MEAN_REVERSION.md  CFD_TREND_FOLLOWING.md  DASHBOARD.md  MONITORING.md  REPO_ARCHITECTURE.md  STRATEGY_DESIGN.md  STRATEGY_ROADMAP.md  TASK_SUPERVISOR.md  TREND_FOLLOWING.md
tests/: conftest.py  fake_exchange.py
(+280 files in other folders)
